--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://mots.c5kimsme0he9.us-east-2.rds.amazonaws.com:3306/mots?useSSL=false&allowPublicKeyRetrieval=true
-spring.datasource.username=${DB_USER}
-spring.datasource.password=${DB_PASS}
+spring.datasource.url=jdbc:mysql://mots.c5kimsme0he9.us-east-2.rds.amazonaws.com:3306/mots
+spring.datasource.username=admin
+spring.datasource.password=Basketballa01
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
